# Linux-adminstration-final-project

./: README.md
part_1/: direct1.tar  direct_1.tar  directory_maker  script1questions.txt  script2questions.txt  userdef
part_2/projects/cmake_project/application/: CMakeLists.txt
part_2/projects/cmake_project/modules/caesar_cipher/: CMakeLists.txt
part_2/projects/cmake_project/modules/xor_cipher/: CMakeLists.txt
part_2/projects/make_project/application/: Makefile  output
part_2/projects/make_project/modules/caesar_cipher/: caesar_cipher.mk
part_2/projects/make_project/modules/xor_cipher/: xor_cipher.mk
part_3/: task_manager  task_manager.c
